--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-ORACLE_USER=bi_user
-ORACLE_PASSWORD=bi_password
+ORACLE_USER=user_name
+ORACLE_PASSWORD=user_pwd
 ORACLE_DSN=localhost:1521/XE
-GEMINI_API_KEY=AIzaSyA0LJ3tg_3aBPjdb_M_3GcXiSxWGj35Txs
+GEMINI_API_KEY=Your_gemini_api_key
