--- a/.env
+++ b/.env
@@ -2,3 +2,12 @@ ORACLE_USER=bi_user
 ORACLE_PASSWORD=bi_password
 ORACLE_DSN=localhost:1521/XE
 GEMINI_API_KEY=AIzaSyA0LJ3tg_3aBPjdb_M_3GcXiSxWGj35Txs
+
+
+
+
+POSTGRES_DB=neondb
+POSTGRES_USER=neondb_owner
+POSTGRES_PASSWORD=npg_KytW9i6AegSs
+POSTGRES_HOST=ep-blue-surf-ad28vew5-pooler.c-2.us-east-1.aws.neon.tech
+POSTGRES_PORT=5432
